# ProjectUniverse

./: .gitignore  CMakeLists.txt
.github/workflows/: main.yml  static-analysis.yml
extension/: .clang-tidy  CMakeLists.txt
extension/include/: Ability.h  Character.h  GraphicalUtility.h  Pathfinding.h  Region.h  Scenario.h
extension/include/plugin/: RegionPlugin.h
extension/include/util/: GraphicalUtility.h
extension/src/: Ability.cpp  Character.cpp  Pathfinding.cpp  Region.cpp  Scenario.cpp  gdextension_registration.cpp
extension/src/plugin/: RegionPlugin.cpp
extension/src/util/: GraphicalUtility.cpp
gameplay/: CMakeLists.txt
gameplay/include/: Ability.h  Character.h  Pathfinding.h
gameplay/src/: Ability.cpp  Character.cpp  GraphicalUtility.cpp  gdextension_registration.cpp
gdproj/: .gitignore  LabScene.tscn  OverworldTest.tscn  PlayerInput.gd  PlayerManager.gd  PlayerMovement.gd  TurnManager.gd  combat_camera.gd  combat_camera.tscn  export_presets.cfg  game.gd  game_settings.gd  highlight.tres  overworld_generation.gd  party.tscn  poisson_disc.gd  poisson_disc_node_3d.gd  project.godot  settings_theme.tres
gdproj/UI/: action_button.gd  character_ui.tscn  combat_button.gd  combat_ui.gd  combat_ui.tscn  control_setting.tscn  pause_menu.gd  pause_menu.tscn  player_action_buttons.gd  player_action_buttons.tscn  remaining_move_label.gd  settings_menu.gd  settings_menu.tscn
gdproj/addons/poisson_disc/: PoissonDiscPlugin.gd  plugin.cfg  poisson_disc_gizmo_plugin.gd  poisson_disc_node_3d.gd
gdproj/addons/region/: RegionPlugin.gd  plugin.cfg  region_gizmo.gd  region_gizmo_plugin.gd  region_node_3d.gd  sub_region_gizmo.gd  sub_region_gizmo_plugin.gd  sub_region_node_3d.gd
gdproj/extension/: projectuniverse.gdextension
gdproj/extension/icon/: attribution.md  character.svg.import  concentration-orb.svg.import  honeycomb.svg.import  mountaintop.svg.import
gdproj/gameplay/: projectuniverse.gdextension
gdproj/sprites/: end_turn_icon.png.import  health_bar.png.import  health_bar_inner.png.import  placeholder.tscn  sprite_set.gd  temp_ability_icon.png.import  temp_icon.png.import
gdproj/sprites/ui_buttons/: move.png.import  move.tres  move_disabled.png.import  move_normal.png.import  move_pressed.png.import
